<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mosaed.popular_movies_stage2.movie.details.DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_movie_poster_detail"
            android:layout_width="0dp"
            android:layout_height="450dp"
            android:contentDescription="@string/description_movie_poster"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/tv_movie_title"
            style="@style/title_style"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster_detail"
            tools:text="Title"/>

        <ImageView
            android:id="@+id/iv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/release_date_icon"
            android:src="@drawable/ic_release_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"/>

        <TextView
            android:id="@+id/tv_movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_release_date"
            app:layout_constraintLeft_toRightOf="@+id/iv_release_date"
            app:layout_constraintTop_toTopOf="@+id/iv_release_date"
            tools:text="2016-08-02"/>

        <ImageView
            android:id="@+id/iv_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/like_icon"
            android:src="@drawable/ic_vote_average"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_release_date"/>

        <TextView
            android:id="@+id/tv_movie_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_vote_average"
            app:layout_constraintLeft_toRightOf="@+id/iv_vote_average"
            app:layout_constraintTop_toTopOf="@+id/iv_vote_average"
            tools:text="635"/>

        <TextView
            android:id="@+id/tv_overview_title"
            style="@style/title_style"
            android:text="@string/title_overview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_vote_average"
            app:layout_goneMarginTop="16dp"/>

        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="32dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingStart="32dp"
            android:paddingTop="4dp"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_title"
            tools:text="Overview Overview Overview Overview Overview Overview 12 Overview Overview Overview"/>

        <TextView
            android:id="@+id/tv_trailer_title"
            style="@style/title_style"
            android:text="@string/title_trailers"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_trailer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbars="none"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailer_title"/>

        <TextView
            android:id="@+id/tv_review_title"
            style="@style/title_style"
            android:text="@string/title_reviews"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_movie_trailer"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_review_title"/>

        <ProgressBar
            android:id="@+id/pb_loading_indicator_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
